# my-haskell-playground

./: .gitignore  README.md  hsdev_tools.sh  playground.cabal  stack.yaml
.github/workflows/: haskell.yml
benchmarks/: CriterionBenchmarks.hs
input/: hoogle.tar.gz.part
src/: Arrays.hs  BinarySearchTree.hs  BloomFilter.hs  Conduits.hs  DateTime.hs  DistRemoteServer.hs  DistServer.hs  JavaClassParser.hs  JvmClassTypes.hs  Main.hs  Monads.hs  Murmurhash.hs  MyTypeFamilies.hs  Param.hs  Phantom.hs  Pure.hs  QC.hs  RedBlackTree.hs  RingBuffer.hs  Semaphore.hs  StateMonad.hs  Treap.hs  Vectors.hs
tests/: Tests.hs  TreapTest.hs  UtilsTest.hs
