name: playground
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: april.once@gmail.com
author: SongPeng
category: Utility
description: my playground

library
    exposed-modules:
        Murmurhash
        Arrays
        Semaphore
        BinarySearchTree
        Treap
        DateTime

    build-depends:
        base <5,
        aeson -any,
        array -any,
        attoparsec -any,
        attoparsec-binary -any,
        bytestring -any,
        containers -any,
        data-default -any,
        directory -any,
        filelock -any,
        filepath -any,
        http-client -any,
        lens -any,
        mtl -any,
        pretty-show -any,
        random -any,
        regex-compat -any,
        text -any,
        time -any,
        transformers -any,
        vector -any,
        wreq -any,
        cereal -any,
        memory -any,
        scientific -any,
        numbers -any,
        hmpfr -any,
        groom,
        stm,

        distributed-process,
        network-transport-tcp

    ld-options: -static -pthread
    c-sources:
        cbits/murmur3.c
    default-language: Haskell2010
    includes:
        murmur3.h
    install-includes:
        murmur3.h
    include-dirs: cbits
    hs-source-dirs: src

test-suite test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.8,
        playground -any,
        hspec -any,
        QuickCheck -any,
        bytestring -any
    default-language: Haskell2010
    hs-source-dirs: tests

benchmark bench
    type: exitcode-stdio-1.0
    main-is: CriterionBenchmarks.hs
    build-depends:
        base -any,
        playground -any,
        criterion -any,
        QuickCheck -any,
        bytestring -any,
        hspec -any
    default-language: Haskell2010
    hs-source-dirs: benchmarks
